--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "taskboard_development",
+    "database": "taskboard_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
