--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "nodemon index.js && NODE_ENV=production",
     "build": "npm install && NODE_ENV=production npx sequelize-cli db:migrate"
   },
   "keywords": [],
